# in-app-navigational-ai-agent

./: .env.example  .gitignore  AGENTS.md  README.md  requirements.txt
llm_based_agent/: .env.example  pyproject.toml
llm_based_agent/docs/: agent_architecture.md  neo4j_schema.md
llm_based_agent/docs/implementation_plan/: 01_architecture.md  02_tech_stack.md  03_project_structure.md  04_components.md  05_agent_tools.md  06_agent_and_prompts.md  07_api_server.md  08_verification.md  09_faq_ingestion_pipeline.md  README.md  session_A_data_layer.md  session_A_summary.md  session_B_phases_1_2.md  session_B_summary.md  session_C_phases_3_4_wiring.md  session_C_summary.md
llm_based_agent/docs/prompts history/: html_cropping.md
llm_based_agent/docs/session_notes/: 2026-05-07-agent-improvement.md  2026-05-15-processing-tab-reasoning.md
llm_based_agent/docs/try_embedding/: 1_try_embedding.ipynb
llm_based_agent/faq_pipeline/: __init__.py  check_indexes.py  check_sizes.py  graph_db_write.py  html_cleaner.py  models.py  pipeline.py  push_json.py  repair_indexes.py  review_log.py  verify_db.py
llm_based_agent/faq_pipeline/docs/: 01_architecture_overview.md  02_pipeline_phases.md  03_data_models_and_schema.md  04_embedding_and_retrieval.md  05_resilience_and_recovery.md  manual_intent_guide.md
llm_based_agent/faq_pipeline/phases/: __init__.py  phase1_classify.py  phase2_steps.py  phase3_match.py  phase4_embed.py  phase5_write.py
llm_based_agent/faq_pipeline/prompts/: __init__.py  classify.py  element_match.py  (+2 more)
llm_based_agent/src/: run_api.bat  run_api.sh
(+72 files in other folders)
